<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Movie Finder</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="reload"><u>Reload</u></string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="released">Release date</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="minute">min.</string>
    <string name="movie_image">Movie image</string>
    <string name="rating_image">Rating image</string>
    <string name="now_playing">Now playing</string>
    <string name="now_playing_request" translatable="false">now_playing</string>
    <string name="top_rated">Top rated</string>
    <string name="popular">Popular</string>
    <string name="in_developing">Section in development</string>
    <string name="detail_orig_title_pattern" translatable="false">%s (%s)</string>
    <string name="detail_duration_pattern" translatable="false">%d %s/ %s</string>
    <string name="detail_rating_pattern" translatable="false">%.2f (%d)</string>
    <string name="detail_budget_pattern" translatable="false">%s: $%d</string>
    <string name="detail_revenue_pattern" translatable="false">%s: $%d</string>
    <string name="detail_release_date_pattern" translatable="false">%s: %s</string>
    <string name="error_message_pattern" translatable="false">%s: %s</string>
    <string name="no_internet">No internet</string>
    <string name="internet_restored">Internet restored</string>
    <string name="child_mode">Child mode</string>
    <string name="notes">Notes</string>
    <string name="history">History</string>
    <string name="empty_data">There is nothing here yet</string>
    <string name="add_note">Add note</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="note_title">Note:</string>
    <string name="delete_everything">Delete everything?</string>
    <string name="contacts">Contacts</string>
    <string name="no_access_message"><![CDATA[No access. Please go to \"Settings -> Applications\" and grant the appropriate permission.]]></string>
    <string name="location">Location</string>
</resources>